# linqt

./: .gitignore  .projectile  CMakeLists.txt  LICENSE  Makefile  README  README.md  band-structure  compile-mn.sh  compile.sh  compile_openmp.sh  compute-nonEqOp-KPM+FFT  graphene+Intrinsic0.28eVDim200x200Clean_tunit.cfg  inline_compute-kpm-local_nonEqOp  inline_compute-kpm-nonEqOp  inline_kuboBastinFromChebmom_parallel  install.py  kuboBastinFromChebmom  main  proj-band-structure  toolchain-gcc.cmake  toolchain-icc+mkl.cmake  toolchain-icc.cmake
src/: #chebyshev_moments2D.cpp#  .#chebyshev_moments2D.cpp  .CMakeLists.txt.save.swp  .chebyshev_solver.cpp.swp  .kuboBastinFromChebmom.cpp.swp  AndersonGraphene.cu  Bastin_FFTs.cpp  CMakeLists.txt  Checkerboard.cu  ConvergenceDosThesis.cu  DisorderedHaldaneHoneyComb.cu  DosThesis.cu  GrapheneAndersonLocalization.cu  GrapheneConductivityVacancies.cu  GrapheneDoubleDiskCloaking.cu  GrapheneMagneticField.cu  GrapheneOneImpurityMap.cu  Greenwood_FFTs.cpp  HaldaneHoneyComb.cu  HaldaneMap.cu  HsiteConductivity.cu  Kubo_solver_FFT.cpp  Kubo_solver_FFT_postProcess.cpp  LinearVsKuboBastin.cu  PureGrapheneConductivity.cu  PureGrapheneLDOSRealSpace.cu  SquareLatticeMagneticField.cu  TB-QuantumTransp.cpp  band-structure.cpp  chebyshev_moments.cpp  chebyshev_moments1D.cpp  chebyshev_moments2D.cpp  chebyshev_momentsTD.cpp  chebyshev_solver.cpp  chebyshev_vectors.cpp  check_kpm-nonEq_momconv.cpp  compute-DOS+FFT.cpp  compute-kpmEvol-EqOP.cpp  compute-kpmEvol-EqOp.cpp  compute-kpmMom-nonEqOp.cpp  (+44 more)
src/chebyshev_kubo_sum/: NonEqOpJYSZgraphene+intrinsic_iso1.0KPM_M100x100RV1.chebmom2D  NonEqOpJYSZgraphene+intrinsic_iso1.0KPM_M100x100RV1.chebmom2D.OUT  compile.sh  kuboBastinFromChebmom  kuboBastinFromChebmom.cpp
src/chebyshev_solver/: .compile.sh.swp  NonEqOp_FL_FromKPMmom.cpp  chebyshev_solver.cpp  compile.sh  inline_compute-kpm-local_nonEqOp.cpp  inline_compute-kpm-nonEqOp.cpp  kuboBastinFromChebmom_parallel.cpp  kuboGreenwoodFromChebmom_parallel.cpp  linear_algebra.cpp  main  main.cpp  mkl_sparse_matrix.cpp  running_condFromKPMmom.cpp
src/kpm/: kpm.cpp
src/kpm/block_matrix/: bmat_op.cpp
src/lattice_fftw3/: MPI_init.cpp  ffw.cpp
src/legacy/: NonEqOp_FL_FromKPMmom.cpp  compute-kpmMom-nonEqOp.cpp  compute-kpmMom-nonEqOp.cpp.save  compute-kpmTDMom-nonEqOp.cpp  compute-singleShot-nonEqOp-TD.cpp  compute-singleShot-nonEqOp-TD_lambdaConv.cpp  compute-singleShot-nonEqOp-TD_momConv.cpp  compute-singleShot-nonEqOp-TD_randVecConv.cpp  condFromKPMmom.cpp.save  kuboBastinFromKPMmom.cpp  neqvstimesFromKPMmom.cpp
src/parser/: parser_get_array.tpp  parser_get_block.tpp  parser_get_boolean.tpp  parser_get_value.tpp  parser_get_vector.tpp  parser_util.cpp
src/uck_tb_operator/: add_k_dep.cpp  mat_op.cpp  read_lattice.cpp  read_operator.cpp  write_operator.cpp
utilities/: CMakeLists.txt  compile.sh  main
utilities/disorder/puddle_generator/: puddle_generator  puddle_generator.cpp
utilities/hopping_generator/: PIA.hop  WS2.hop  WSe2.hop  a.out  hopping_generator.cpp  lattice_geometry.h
utilities/include/: full_spectral_sum.hpp
utilities/postprocessing/: average_moments1D.cpp
utilities/python/: CMakeLists.txt  add_chebmom2D.py  average_chebmom2D.py  qstate_generator.ipynb  substract_chebmom2D.py
utilities/python/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  qstate_generator-checkpoint.ipynb
utilities/python/test/lib/python3.6/: sciplots.py
utilities/python/test/python_version/: kpm.py  operators.py
utilities/python/tight-binding/: convert2LatGen.py  kwant2latgen.py  kwant2wannier.py  latgen2sparse  operators.py  visualization.py  wannier_bands.cp
utilities/python/tight-binding-models/: convert2LatGen.py  graphene+iso-example.Geo  graphene+iso-example.Ham  graphene+tmd2wannier.ipynb  graphene.py  output.Geo
utilities/python/tight-binding-models/graphene+tmds/: graphene+tmd2wannier.ipynb  graphene.py
utilities/python/tight-binding-models/graphene+tmds/.ipynb_checkpoints/: graphene+tmd2wannier-checkpoint.ipynb
utilities/python/tight-binding/tbmodels_interface/: tbgen.py
utilities/python/tight_binding/: operators.py  visualization.py  wannier2sparse.py  wannier_tools.py
utilities/src/: full_spectral_sum.cu  spectral_conductivity.cpp
utilities/wannier2sparse/: CMakeLists.txt  README.md
utilities/wannier2sparse/include/: disordered_hopping_list.hpp  hopping_kind.hpp  hopping_list.hpp  hopping_list_util.hpp  operator_utils.hpp  sparse_matrix.hpp  tbmodel.hpp  w2sp_arguments.hpp  wannier2sparse.hpp  wannier_parser.hpp
utilities/wannier2sparse/lib/: band_processing.py  sciplots.py  wannier_supercell.py  wannier_tools.py
utilities/wannier2sparse/lib/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
utilities/wannier2sparse/samples/: VSeTe.pos  VSeTe.uc  VSeTe.xyz
utilities/wannier2sparse/src/: CMakeLists.txt  hopping_list.cpp  hopping_list_util.cpp  main.cpp  pybind11_wrapper.cpp  sparse_matrix.cpp  tbmodel.cpp  wannier2sparse.cpp  wannier_parser.cpp
utilities/wannier2sparse/test/: CMakeLists.txt  density_and_current_from_files.cpp  spin_graphene.uc  spin_graphene.xyz
utilities/wannier2sparse/test/graphene_sot/: graphene+rashba+M_x.xyz  graphene+rashba+M_z.uc
utilities/wannier2sparse/test/linear_chain/: NonEqOpVX-VXlinear_chainKPM_M100x100_state100.chebmom2D  linear_chain.xyz  supercell.py
utilities/wannier2sparse/test/linear_chain/operators/: linear_chain.HAM.CSR  linear_chain.SZ.CSR  linear_chain.VX.CSR
utilities/wannier2sparse/test/linear_chain_local/: linear_chain.HAM.CSR  linear_chain.TX.CSR  linear_chain.TY.CSR  linear_chain.TZ.CSR  linear_chain.uc  linear_chain.xyz
utilities/wannier2sparse/test/linear_chain_local/old/: linear_chain.uc  (+3 more)
utilities/wannier2sparse/test/linear_chain_multi/: linear_chain.VX.CSR  linear_chain.VXSX.CSR  linear_chain.VXSY.CSR  linear_chain.VXSZ.CSR
utilities/wannier2sparse/test/model_from_files/: model_from_files.cpp
utilities/wannier2sparse/test/read_unit_cell_file/: read_unit_cell_file.cpp  read_xyz_file.cpp
utilities/wannier2sparse/utilities/: kwant2wannier.py  wannier_tools.py
(+1050 files in other folders)
